[workspace]
members = [
  # "astroport-adapter",
  "astrovault-adapter",
  "bundles/*",
  "osmosis-adapter",
  "wyndex-adapter",
  "kujira-adapter",
  # "mars-adapter",
  "neutron-dex-adapter",
]

resolver = "2"

[workspace.package]
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Riada <riada@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
documentation = "https://docs.abstract.money/"
edition = "2021"
homepage = "https://abstract.money"
keywords = ["cosmos", "cosmwasm", "framework"]
license = "GPL-3.0-or-later"
repository = "https://github.com/AbstractSDK/abstract"
version = "0.26.1"

[workspace.dependencies]
cosmwasm-schema = { version = "3.0.1" }
cosmwasm-std    = { version = "3.0.1" }
cw-address-like = { version =  "3.0.1",  git = "https://github.com/permissionlessweb/cw-plus-plus" }

cw-asset        = { version = "4.0", git = "https://github.com/permissionlessweb/cw-asset" }

cw-plus-orch    = { version = "0.25.0" }
cw-storage-plus = { version = "3.0.0" }
cw-utils        = { version = "3.0.0" }
cw2             = { version = "3.0.0" }
cw-controllers  = { version = "3.0.0" }
cw-orch            = { version = "0.30.0",  git = "https://github.com/permissionlessweb/cw-orchestrator" }
cw-ownable      = { version = "3.0.1", git = "https://github.com/permissionlessweb/cw-plus-plus" }
cw20            = { version = "3.0.0", git = "https://github.com/permissionlessweb/cw-plus" }
cw20-base       = { version = "3.0.0", features = ["library"],  git = "https://github.com/permissionlessweb/cw-plus" }


anyhow = "1.0"

chrono    = { version = "0.4.31", default-features = false }
clap      = { version = "4.0.32", features = ["derive"] }
protobuf  = { version = "2", features = ["with-bytes"] }
schemars  = { version = "0.8.4" }
semver    = "1.0"
serde     = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.50" }

## crates in order of publishing ## see docs/Publishing.md

abstract-adapter   = { version = "0.26.1" }
abstract-interface = { version = "0.26.1" }
abstract-sdk       = { version = "0.26.1" }
abstract-std       = { version = "0.26.1" }

abstract-adapter-utils         = { version = "0.26.1" }
abstract-dex-standard          = { version = "0.26.1" }
abstract-money-market-standard = { version = "0.26.1" }
abstract-staking-standard      = { version = "0.26.1" }

# TODO: REMOVE As soon as new dex-standard published
[patch.crates-io]
abstract-adapter               = { path = "../framework/packages/abstract-adapter" }
abstract-adapter-utils         = { path = "../framework/packages/standards/utils" }
abstract-dex-standard          = { path = "../framework/packages/standards/dex" }
abstract-interface             = { path = "../framework/packages/abstract-interface" }
abstract-macros                = { path = "../framework/packages/abstract-macros" }
abstract-money-market-standard = { path = "../framework/packages/standards/money-market" }
abstract-sdk                   = { path = "../framework/packages/abstract-sdk" }
abstract-staking-standard      = { path = "../framework/packages/standards/staking" }
abstract-std                   = { path = "../framework/packages/abstract-std" }

# Backup release profile, will result in warnings during optimization
[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false
