[package]
authors     = { workspace = true }
description = "Abstract ICA Client Contract"
edition     = { workspace = true }
license     = { workspace = true }
name        = "abstract-ica-client"
readme      = "README.md"
repository  = "https://github.com/AbstractSDK/abstract"
version     = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export  = []

[dependencies]
abstract-ica    = { workspace = true }
abstract-macros = { workspace = true }
abstract-sdk    = { workspace = true }
abstract-std    = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true, features = ["stargate", "staking"] }
cw-ownable      = { workspace = true }
cw2             = { workspace = true }
semver          = { workspace = true }
thiserror       = { workspace = true }

evm-note     = { version = "0.3.1", features = ["library"], git = "https://github.com/permissionlessweb/polytone", branch = "bump/cw3-evm"  }
polytone-evm = { version = "2.0.0", git = "https://github.com/permissionlessweb/polytone", branch = "bump/cw3-evm"  }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
workspace-hack = { version = "0.1", path = "../../../workspace-hack" }

[dev-dependencies]
abstract-testing = { workspace = true }
cosmwasm-schema  = { workspace = true }
coverage-helper  = { workspace = true }

[profile.release]
overflow-checks = true
